﻿Added error log to AppData folder to assist with troubleshooting.