@@ -251,6 +251,26 @@
         End Set
     End Property
 
+    Private _ShowProjectNameInTitleBar As Boolean
+    Public Property ShowProjectNameInTitleBar As Boolean
+        Get
+            Return _ShowProjectNameInTitleBar
+        End Get
+        Set(value As Boolean)
+            _ShowProjectNameInTitleBar = value
+        End Set
+    End Property
+
+    Private _ShowProjectDirectoryInTitleBar As Boolean
+    Public Property ShowProjectDirectoryInTitleBar As Boolean
+        Get
+            Return _ShowProjectDirectoryInTitleBar
+        End Get
+        Set(value As Boolean)
+            _ShowProjectDirectoryInTitleBar = value
+        End Set
+    End Property
+
     Public Sub New()
         ' Use this when you just want an empty settings object.
         Me.New(False)
@@ -267,6 +287,8 @@
 
         ' Load settings.
         Me.LastVersionCheckDate = My.Configger.LoadSetting(NameOf(Me.LastVersionCheckDate), New DateTime(0))
+        Me.ShowProjectNameInTitleBar = My.Configger.LoadSetting(NameOf(Me.ShowProjectNameInTitleBar), True)
+        Me.ShowProjectDirectoryInTitleBar = My.Configger.LoadSetting(NameOf(Me.ShowProjectDirectoryInTitleBar), True)
         Me.OpenWithDefault.SqlFiles = My.Configger.LoadSetting(NameOf(Me.OpenWithDefault.SqlFiles), False)
         Me.OpenWithDefault.ConfigFiles = My.Configger.LoadSetting(NameOf(Me.OpenWithDefault.ConfigFiles), False)
         Me.OpenWithDefault.SquealerFiles = My.Configger.LoadSetting(NameOf(Me.OpenWithDefault.SquealerFiles), False)
@@ -310,6 +332,8 @@
             Case DirectoryStyle.Symbolic
                 f.rbSymbolic.Checked = True
         End Select
+        f.chkShowProjectName.Checked = Me.ShowProjectNameInTitleBar
+        f.chkShowProjectDirectory.Checked = Me.ShowProjectDirectoryInTitleBar
         f.chkOutputDefaultEditor.Checked = Me.OpenWithDefault.SqlFiles
         f.chkConfigDefaultEditor.Checked = Me.OpenWithDefault.ConfigFiles
         f.chkSquealerDefaultEditor.Checked = Me.OpenWithDefault.SquealerFiles
@@ -347,6 +371,8 @@
         Else
             Me.DirectoryStyleSelected = DirectoryStyle.Symbolic
         End If
+        Me.ShowProjectNameInTitleBar = f.chkShowProjectName.Checked
+        Me.ShowProjectDirectoryInTitleBar = f.chkShowProjectDirectory.Checked
         Me.OpenWithDefault.SqlFiles = f.chkOutputDefaultEditor.Checked
         Me.OpenWithDefault.ConfigFiles = f.chkConfigDefaultEditor.Checked
         Me.OpenWithDefault.SquealerFiles = f.chkSquealerDefaultEditor.Checked
@@ -375,6 +401,8 @@
         My.Configger.SaveSetting(NameOf(Me.ProjectFoldersLimit), Me.ProjectFoldersLimit)
         My.Configger.SaveSetting(NameOf(Me.WildcardBehavior.UseSpaces), Me.WildcardBehavior.UseSpaces)
         My.Configger.SaveSetting(NameOf(Me.WildcardBehavior.UseEdges), Me.WildcardBehavior.UseEdges)
+        My.Configger.SaveSetting(NameOf(Me.ShowProjectNameInTitleBar), Me.ShowProjectNameInTitleBar)
+        My.Configger.SaveSetting(NameOf(Me.ShowProjectDirectoryInTitleBar), Me.ShowProjectDirectoryInTitleBar)
         My.Configger.SaveSetting(NameOf(Me.AutoEditNewFiles), Me.AutoEditNewFiles)
         My.Configger.SaveSetting(NameOf(Me.ShowLeaderboardAtStartup), Me.ShowLeaderboardAtStartup)
         My.Configger.SaveSetting(NameOf(Me.OutputToClipboard), Me.OutputToClipboard)
